fix(ios): Scroll issue on iOS affecting dialogs and splitter. Closes #2220, closes #2274. Related #1949.

--- a/core/css/common.css
+++ b/core/css/common.css
@@ -266,3 +266,10 @@ ons-carousel[fullscreen] {
   position: inherit;
   width: 100%;
 }
+
+.ons-ios-scroll-fix .page:not(.page--wrapper)[shown] > .page__content {
+  overflow-y: hidden;
+}
+.ons-ios-scroll-fix ons-splitter-side > .page:not(.page--wrapper)[shown] > .page__content {
+  overflow-y: auto;
+}
